--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <button type="submit" class="click" >Click Here!</button>
         
         </form>
-        <h2>SEE RESULT BELLOW AFTER CLICK!</h2>
+        <h2>SEE RESULT BELOW AFTER CLICK!</h2>
         <p id="js-error-message" class="error-message"></p>
         <section class="results hidden">
           
